has all necessary functions working

--- a/src/template.html
+++ b/src/template.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="content">
-        <span>Select how you would like to search for a location's weather.</span>
+        <h2>Select how you would like to search for a location's weather</h2>
         <div id="radio">
             <span>
                 <input type="radio" id="searchOption1"
@@ -22,11 +22,11 @@
                 <label for="searchOption2">Zip Code</label>
             </span>
     
-            <input type="radio" id="searchOption3"
-                    name="search" value="Coordinates">
-            <label for="searchOption3">Coordinates</label>
+            <span>
+                <input type="radio" id="searchOption3"
+                       name="search" value="Coordinates">
+                <label for="searchOption3">Coordinates</label>
             </span>
-            
             <span>
                 <input id="submitOption" type="submit" value="Submit">
             </span>
