added a loading display when fetch request is being made

--- a/src/template.html
+++ b/src/template.html
@@ -38,10 +38,11 @@
     
         </div>
         <div id="weatherDisplay">
-            <p id="location"></p>
-            <P id="description"></P>
-            <P id="temp"></P>
-            <P id="windSpeed"></P>
+                <p id="location"></p>
+                <P id="description"></P>
+                <P id="temp"></P>
+                <P id="windSpeed"></P>
+            </div>
         </div>
     </div>
 </body>
